# budgie-monitor-brightness-applet

./: .gitattributes  README.md  installscript.sh  meson.build  meson_options.txt
data/: 99-i2c_brightness_applet.rules  BudgieMonitorBrightnessApplet.plugin  i2c-dev-brightnes-applet.conf  meson.build
po/: LINGUAS  budgie-monitor-brightness-applet.pot  de.po  es.po  fr.po  it.po  ru.po
src/: applet.c  applet.h  ddcwrapper.c  ddcwrapper.h  displaymanager.c  displaymanager.h  internaldisplayhandler.c  internaldisplayhandler.h  meson.build  plugin.c  plugin.h
